statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ss-example
spec:
  serviceName: "nginx"
  replicas: 2
  selector:
    matchLabels:
      app: myss
  template:
    metadata:
      labels:
        app: myss
    spec:
      containers:
      - name: nginx
        image: nginx
