svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ks-svc
  namespace: venky
spec:
  selector:
    app: venkyapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
